fix align

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ header ul li {
 }
 
 .container {
+	text-align: center;
 	margin-top: 2em;
 	display: flex;
 	justify-content: flex-start;
